<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_language"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/language"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/star_m"
        android:icon="@drawable/ic_star_border_black_24dp"
        android:title="@string/rate"
        app:showAsAction="always" />
    <item
        android:id="@+id/share_m"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/exit_m"
        android:title="@string/exit" />
</menu>